tests/error/compile/goto_recursion.wks
# @desc: Infinite @goto recursion detection

# @test: "a"
# @expect-error: Infinite @goto recursion detected

# Test @goto infinite recursion detection
a "Self-referential goto" @goto "a"
